--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@tanstack/react-query": "^5.14.0",
 		"@tanstack/react-query-devtools": "^5.14.0",
 		"axios": "^1.6.2",
+		"classnames": "^2.3.2",
+		"js-cookie": "^3.0.5",
 		"jwt-decode": "^4.0.0",
 		"next": "14.0.4",
 		"next-auth": "^4.24.5",
@@ -24,6 +26,7 @@
 		"sass": "^1.69.5"
 	},
 	"devDependencies": {
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
