--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
 		"@react-oauth/google": "^0.12.1",
 		"@tanstack/react-query": "^5.14.0",
 		"@tanstack/react-query-devtools": "^5.14.0",
 		"axios": "^1.6.2",
-		"classnames": "^2.3.2",
+		"classnames": "^2.5.1",
+		"framer-motion": "^11.0.3",
 		"js-cookie": "^3.0.5",
 		"jwt-decode": "^4.0.0",
 		"next": "14.0.4",
 		"next-auth": "^4.24.5",
 		"next-themes": "^0.2.1",
 		"react": "^18",
+		"react-device-detect": "^2.2.3",
 		"react-dom": "^18",
+		"react-hook-form": "^7.49.3",
 		"react-icons": "^4.12.0",
 		"react-toastify": "^9.1.3",
-		"sass": "^1.69.5"
+		"sass": "^1.69.5",
+		"tailwind-merge": "^2.2.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/js-cookie": "^3.0.6",
