--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react": "^18",
 		"react-device-detect": "^2.2.3",
 		"react-dom": "^18",
+		"react-dropzone": "^14.2.3",
 		"react-hook-form": "^7.49.3",
 		"react-icons": "^4.12.0",
 		"react-toastify": "^9.1.3",
