--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@fullcalendar/core": "^6.1.10",
+		"@fullcalendar/daygrid": "^6.1.10",
+		"@fullcalendar/interaction": "^6.1.10",
+		"@fullcalendar/react": "^6.1.10",
+		"@fullcalendar/timegrid": "^6.1.10",
 		"@hookform/resolvers": "^3.3.4",
 		"@react-oauth/google": "^0.12.1",
 		"@tanstack/react-query": "^5.14.0",
@@ -18,6 +23,7 @@
 		"framer-motion": "^11.0.3",
 		"js-cookie": "^3.0.5",
 		"jwt-decode": "^4.0.0",
+		"moment": "^2.30.1",
 		"next": "14.0.4",
 		"next-auth": "^4.24.5",
 		"next-themes": "^0.2.1",
@@ -27,6 +33,7 @@
 		"react-dropzone": "^14.2.3",
 		"react-hook-form": "^7.49.3",
 		"react-icons": "^4.12.0",
+		"react-modal": "^3.16.1",
 		"react-toastify": "^9.1.3",
 		"sass": "^1.69.5",
 		"tailwind-merge": "^2.2.1",
