--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@felrov/quill-image-resize-module": "^3.2.0",
 		"@fullcalendar/core": "^6.1.10",
 		"@fullcalendar/daygrid": "^6.1.10",
 		"@fullcalendar/interaction": "^6.1.10",
@@ -27,6 +28,8 @@
 		"next": "14.0.4",
 		"next-auth": "^4.24.5",
 		"next-themes": "^0.2.1",
+		"quill": "^1.3.7",
+		"quill-image-resize-module": "^3.0.0",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^5.2.0",
 		"react-device-detect": "^2.2.3",
@@ -35,6 +38,7 @@
 		"react-hook-form": "^7.49.3",
 		"react-icons": "^4.12.0",
 		"react-modal": "^3.16.1",
+		"react-quill": "^2.0.0",
 		"react-toastify": "^9.1.3",
 		"sass": "^1.69.5",
 		"tailwind-merge": "^2.2.1",
