--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "quill.d.ts"],
 	"exclude": ["node_modules"]
 }
