Add search and data filter in announcement with announcement in dashboard

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@react-oauth/google": "^0.12.1",
 		"@tanstack/react-query": "^5.14.0",
 		"@tanstack/react-query-devtools": "^5.14.0",
+		"@writergate/quill-image-uploader-nextjs": "^0.2.4",
 		"axios": "^1.6.2",
 		"classnames": "^2.5.1",
 		"framer-motion": "^11.0.3",
@@ -28,8 +29,10 @@
 		"next": "14.0.4",
 		"next-auth": "^4.24.5",
 		"next-themes": "^0.2.1",
-		"quill": "^1.3.7",
+		"quill": "^1.3.6",
 		"quill-image-resize-module": "^3.0.0",
+		"quill-image-resize-module-react": "^3.0.0",
+		"quill-image-uploader": "^1.3.0",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^5.2.0",
 		"react-device-detect": "^2.2.3",
