--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"quill-image-uploader": "^1.3.0",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^5.2.0",
+		"react-copy-to-clipboard": "^5.1.0",
 		"react-device-detect": "^2.2.3",
 		"react-dom": "^18",
 		"react-dropzone": "^14.2.3",
@@ -43,6 +44,7 @@
 		"react-icons": "^4.12.0",
 		"react-modal": "^3.16.1",
 		"react-quill": "^2.0.0",
+		"react-syntax-highlighter": "^15.5.0",
 		"react-toastify": "^9.1.3",
 		"sass": "^1.69.5",
 		"tailwind-merge": "^2.2.1",
@@ -52,7 +54,9 @@
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
 		"@types/react": "^18",
+		"@types/react-copy-to-clipboard": "^5.0.7",
 		"@types/react-dom": "^18",
+		"@types/react-syntax-highlighter": "^15.5.11",
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8",
 		"eslint-config-next": "14.0.4",
