--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_GITHUB_TOKEN=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
-NEXT_PUBLIC_URL = http://localhost:5000
+NEXT_PUBLIC_GITHUB_TOKEN=
+NEXT_PUBLIC_URL = 
